--- a/themes/bookStacked/scss/_css-variables.scss
+++ b/themes/bookStacked/scss/_css-variables.scss
@@ -161,4 +161,28 @@
 
 [data-bs-theme=dark] {
     --tiki-main-content-bg: #222;
+    .bg-light { background-color: #{$gray-800}; }
+    .nav-link { color: var(--#{$prefix}link-color); }
+//    $nav-link-hover-color:              var(--#{$prefix}link-hover-color);
+    .btn-outline-primary {
+        --bs-btn-color: #3192D8; --bs-btn-border-color: var(--bs-btn-color);
+    }
+    .btn-outline-secondary {
+        --bs-btn-color: #818A92; --bs-btn-border-color: var(--bs-btn-color);
+    }
+    .btn-outline-success {
+        --bs-btn-color: #1EA465; --bs-btn-border-color: var(--bs-btn-color);
+    }
+    .btn-outline-danger {
+        --bs-btn-color: #E35F6C; --bs-btn-border-color: var(--bs-btn-color);
+    }
+    .btn-outline-warning {
+        --bs-btn-color: #B38600; --bs-btn-border-color: var(--bs-btn-color);
+    }
+    .btn-outline-info {
+        --bs-btn-color: #0A9BB8; --bs-btn-border-color: var(--bs-btn-color);
+    }
+    .btn-outline-dark {
+        --bs-btn-color: #818A92; --bs-btn-border-color: var(--bs-btn-color); // Same as secondary
+    }
 }
